--- a/style.css
+++ b/style.css
@@ -1,45 +1,79 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    color: #FFFFFF;
-    background-color: #1e2929;
     font-family: Candara, serif;
     font-weight: 700;
+    margin: 0;
 }
 
 /*** Reusable ***/
+
 h1,
 h2,
 h3 {
     font-family: Cambria, sans-serif;
-    font-weight: 400; 
+    font-weight: 400;
+    margin-top: 0;
 }
 
 h1 {
     font-size: 4rem;
     line-height: 1.125;
+    margin-bottom: 0.5rem;
 }
 
 h2 {
     font-size: 3rem;
-    line-height: 1.25; /* bezrozměrně */
+    line-height: 1.1;
+    margin-bottom: 0.5rem;
 }
 
 h3 {
     font-size: 2.25rem;
-    line-height: 1.25; /* bezrozměrně */
+    line-height: 1.15;
+    margin-bottom: 1.5rem;
 }
 
 small {
     color: #FFEBD6;
+    font-family: Candara, sans-serif;
     font-size: 1rem;
-    line-height: 1.25;
+    line-height: 1.5;
     letter-spacing: 0.375em;
     text-transform: uppercase;
+    border-left: 2px solid #FFEBD6;
+    display: block;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 1rem;
+    margin-bottom: 0.5rem;
 }
 
-p,
+ul {
+    font-size: 1.375rem;
+    line-height: 1.5;
+    margin-top: 0;
+    padding-left: 1.6875rem;
+}
+
 li {
+    list-style-type: "— ";
+}
+
+p {
     font-size: 1.375rem; 
-    line-height: 1.4545;
+    line-height: 1.5;
+    margin-top: 0;
+    margin-bottom: 2rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 1.5rem;
 }
 
 /*** Links ***/
@@ -59,20 +93,28 @@ a:active {
 
 header {
     color: #000000;
+    display: inline-block;
+    margin-bottom: 2rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+}
+
+header small {
+    color: #000000;
+    border-left: 2px solid #000000;
 }
 
 /** Navigation **/
+
 nav ul {
-    color: yellow;
-    outline: 1px solid red;
-    background-color: skyblue;
-    padding: 0;
-    font-size: 1.5rem;
+    text-align: right;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
 }
 
 nav li {
     display: inline-block;
-    background-color: green;
+    margin-left: 0.375rem;
 }
 
 nav a,
@@ -83,6 +125,8 @@ nav a:visited {
     line-height: 1.25;
     text-transform: uppercase;
     text-decoration: none;
+    display: block;
+    padding: 0.5rem 0.375rem;
 }
 
 nav a:hover,
@@ -90,14 +134,18 @@ nav a:active {
     color: blue;
 }
 
+footer,
+main {
+    margin-bottom: 1rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+}
 
-/** Technologies **/
+section {
+    margin-bottom: 4rem;
+}
 
-
-/** Projects **/
-
-
-/** Contacts **/
-
-
-/*** Foooter ***/
+article {
+    margin-top: 1.5rem;
+    margin-bottom: 2.25rem;
+}
