--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-* {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
 }
 
 body {
-    color: #FFFFFF;
+    color: #ffffff;
     background-color: #1E2929;
-    background-image: url('images/background.png'), linear-gradient(rgba(28, 38, 39, 0), #000);
+    background-image: url('images/background.png'), linear-gradient(#1C262700, #000000);
     background-repeat: no-repeat;
     background-position: right 0 top 0, left 0 bottom 0;
     background-size: 1440px auto, 100% 37.5rem;
@@ -14,34 +16,9 @@ body {
     margin: 0;
 }
 
-header {
-    color: #000000;
-    background-image: url('images/background.png'),
-        linear-gradient(
-            #f7d7be 0px,
-            #f7d7be 100px,
-            #edceb2 150px,
-            #edceb2 175px,
-            #cfc1ae 185px,
-            #cfc1ae 215px,
-            #abab9f 225px,
-            #abab9f 330px,
-            #959f96 340px,
-            #959f96 400px,
-            #77867f 410px,
-            #485855 600px);
-    background-repeat: no-repeat;
-    background-position: right 0 top 0;
-    background-size: 1440px auto;
-    display: inline-block;
-    margin-bottom: 2rem;
+body > * {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
-}
-
-header small {
-    color: #000000;
-    border-left: 2px solid #000000;
 }
 
 /*** Reusable ***/
@@ -79,18 +56,26 @@ small {
     line-height: 1.5;
     letter-spacing: 0.375em;
     text-transform: uppercase;
-    border-left: 2px solid #FFEBD6;
     display: block;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     padding-left: 1rem;
+    border-left: 2px solid currentColor;
     margin-bottom: 0.5rem;
 }
 
+p,
 ul {
     font-size: 1.375rem;
     line-height: 1.5;
     margin-top: 0;
+}
+
+p {
+    margin-bottom: 2rem;
+}
+
+ul {
     padding-left: 1.6875rem;
 }
 
@@ -98,17 +83,10 @@ li {
     list-style-type: "— ";
 }
 
-p {
-    font-size: 1.375rem;
-    line-height: 1.5;
-    margin-top: 0;
-    margin-bottom: 2rem;
-}
-
 img {
+    display: block;
     max-width: 100%;
     height: auto;
-    display: block;
     margin-bottom: 1.5rem;
 }
 
@@ -123,6 +101,35 @@ a:visited {
 a:hover,
 a:active {
     color: #FFFFFF;
+}
+
+/** Header **/
+
+header {
+    color: #000000;
+    background-image: url('images/background.png'),
+        linear-gradient(
+            #f7d7be 0px,
+            #f7d7be 100px,
+            #edceb2 150px,
+            #edceb2 175px,
+            #cfc1ae 185px,
+            #cfc1ae 215px,
+            #abab9f 225px,
+            #abab9f 330px,
+            #959f96 340px,
+            #959f96 400px,
+            #77867f 410px,
+            #485855 600px);
+    background-repeat: no-repeat;
+    background-position: right 0 top 0;
+    background-size: 1440px auto;
+    display: inline-block;
+    margin-bottom: 2rem;
+}
+
+header small {
+    color: inherit;
 }
 
 /** Navigation **/
@@ -152,13 +159,7 @@ nav a:visited {
 
 nav a:hover,
 nav a:active {
-    color: #1e2929
-}
-
-footer,
-main {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+    color: #1E2929;
 }
 
 section {
