--- a/style.css
+++ b/style.css
@@ -21,6 +21,13 @@ body > * {
     padding-right: 1.25rem;
 }
 
+@media(min-width: 960px) {
+    body > * {
+        padding-left: 10.25rem;
+        padding-right: 10.25rem;
+    }
+}
+
 /*** Reusable ***/
 
 h1,
@@ -37,16 +44,34 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
+@media(min-width: 960px) {
+    h1 {
+        font-size: 6.875rem;
+    }
+}
+
 h2 {
     font-size: 3rem;
     line-height: 1.1;
     margin-bottom: 0.5rem;
 }
 
+@media(min-width: 960px) {
+    h2 {
+        font-size: 4rem;
+    }
+}
+
 h3 {
     font-size: 2.25rem;
     line-height: 1.15;
     margin-bottom: 1.5rem;
+}
+
+@media(min-width: 960px) {
+    h3 {
+        font-size: 2.375rem;
+    }
 }
 
 small {
@@ -56,12 +81,18 @@ small {
     line-height: 1.5;
     letter-spacing: 0.375em;
     text-transform: uppercase;
+    border-left: 2px solid currentColor;
     display: block;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     padding-left: 1rem;
-    border-left: 2px solid currentColor;
     margin-bottom: 0.5rem;
+}
+
+@media(min-width: 960px) {
+    small {
+        font-size: 1.375rem;
+    }
 }
 
 p,
@@ -128,8 +159,20 @@ header {
     margin-bottom: 2rem;
 }
 
+@media(min-width: 960px) {
+    header {
+        background-image: none;
+        padding-left: 10.25rem;
+        padding-right: 10.25rem;
+    }
+}
+
 header small {
     color: inherit;
+}
+
+header p {
+    max-width: 29.125rem;
 }
 
 /** Navigation **/
@@ -160,6 +203,12 @@ nav a:visited {
 nav a:hover,
 nav a:active {
     color: hsl(180, 15%, 14%);
+}
+
+@media(min-width: 960px) {
+    .nav {
+        padding-right: 1.5rem;
+    }
 }
 
 section {
