--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1 {
 @media(min-width: 960px) {
     h1 {
         font-size: 6.875rem;
+        margin-bottom: 1.5rem;
     }
 }
 
@@ -92,6 +93,7 @@ small {
 @media(min-width: 960px) {
     small {
         font-size: 1.375rem;
+        margin-bottom: 1.5rem;
     }
 }
 
@@ -155,15 +157,15 @@ header {
     background-repeat: no-repeat;
     background-position: right 0 top 0;
     background-size: 1440px auto;
-    display: inline-block;
     margin-bottom: 2rem;
+    max-width: 100%;
 }
 
 @media(min-width: 960px) {
     header {
-        background-image: none;
-        padding-left: 10.25rem;
-        padding-right: 10.25rem;
+        padding-left: 1.25rem;
+        padding-right: 1.25rem;
+        margin-bottom: 6rem;
     }
 }
 
@@ -171,8 +173,15 @@ header small {
     color: inherit;
 }
 
-header p {
+.header-text {
     max-width: 29.125rem;
+}
+
+@media(min-width: 960px) {
+    .container {
+        padding-left: 9.25rem;
+        padding-right: 9.25rem;
+    }
 }
 
 /** Navigation **/
@@ -181,6 +190,12 @@ nav ul {
     text-align: right;
     margin-top: 1rem;
     margin-bottom: 3rem;
+}
+
+@media(min-width: 960px) {
+    nav ul {
+        margin-bottom: 6.9375rem;
+    }
 }
 
 nav li {
@@ -203,12 +218,6 @@ nav a:visited {
 nav a:hover,
 nav a:active {
     color: hsl(180, 15%, 14%);
-}
-
-@media(min-width: 960px) {
-    .nav {
-        padding-right: 1.5rem;
-    }
 }
 
 section {
