--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h1 {
     h1 {
         font-size: 6.875rem;
         margin-bottom: 1.5rem;
+        line-height: 1;
     }
 }
 
@@ -79,6 +80,7 @@ small {
     color: hsl(31, 100%, 92%);
     font-family: Candara, sans-serif;
     font-size: 1rem;
+    font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.375em;
     text-transform: uppercase;
@@ -93,7 +95,8 @@ small {
 @media(min-width: 960px) {
     small {
         font-size: 1.375rem;
-        margin-bottom: 1.5rem;
+        line-height: 1.25;
+        margin-bottom: 1.125rem;
     }
 }
 
