--- a/style.css
+++ b/style.css
@@ -127,6 +127,21 @@ img {
     margin-bottom: 1.5rem;
 }
 
+section {
+    margin-bottom: 4rem;
+}
+
+@media(min-width: 960px) {
+    section {
+        margin-bottom: 6rem;
+    }
+}
+
+article {
+    margin-top: 1.5rem;
+    margin-bottom: 2.25rem;
+}
+
 /*** Links ***/
 
 a,
@@ -242,17 +257,11 @@ nav a:active {
     
 }
 
-section {
-    margin-bottom: 4rem;
-}
+/** Contacts **/
 
 @media(min-width: 960px) {
-    section {
-        margin-bottom: 6rem;
+    .contacts {
+        max-width: 36rem;
     }
-}
-
-article {
-    margin-top: 1.5rem;
-    margin-bottom: 2.25rem;
+    
 }
