--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ ul {
 
 p {
     margin-bottom: 2rem;
+    order: 1;
 }
 
 ul {
@@ -127,6 +128,12 @@ img {
     margin-bottom: 1.5rem;
 }
 
+@media(min-width: 1280px) {
+    img {
+        margin: 0;
+    }
+}
+
 section {
     margin-bottom: 4rem;
 }
@@ -138,8 +145,17 @@ section {
 }
 
 article {
+    display: flex;
+    flex-direction: column;
     margin-top: 1.5rem;
     margin-bottom: 2.25rem;
+    max-width: 36rem;
+}
+
+@media(min-width: 1280px) {
+    article {
+        margin-bottom: 4rem;
+    }
 }
 
 /*** Links ***/
@@ -160,19 +176,19 @@ a:active {
 header {
     color: hsl(0, 0%, 0%);
     background-image: url('images/background.png'),
-        linear-gradient(
-            hsl(26, 78%, 86%) 0px,
-            hsl(26, 78%, 86%) 100px,
-            hsl(28, 62%, 81%) 150px,
-            hsl(28, 62%, 81%) 175px,
-            hsl(35, 26%, 75%) 185px,
-            hsl(35, 26%, 75%) 215px,
-            hsl(60, 7%, 65%) 225px,
-            hsl(60, 7%, 65%) 330px,
-            hsl(126, 5%, 60%) 340px,
-            hsl(126, 5%, 60%) 400px,
-            hsl(152, 6%, 50%) 410px,
-            hsl(169, 10%, 31%) 600px);
+    linear-gradient(
+    hsl(26, 78%, 86%) 0px,
+    hsl(26, 78%, 86%) 100px,
+    hsl(28, 62%, 81%) 150px,
+    hsl(28, 62%, 81%) 175px,
+    hsl(35, 26%, 75%) 185px,
+    hsl(35, 26%, 75%) 215px,
+    hsl(60, 7%, 65%) 225px,
+    hsl(60, 7%, 65%) 330px,
+    hsl(126, 5%, 60%) 340px,
+    hsl(126, 5%, 60%) 400px,
+    hsl(152, 6%, 50%) 410px,
+    hsl(169, 10%, 31%) 600px);
     background-repeat: no-repeat;
     background-position: right 0 top 0;
     background-size: 1440px auto;
@@ -245,7 +261,39 @@ nav a:active {
     .technologies {
         max-width: 36rem;
     }
-    
+}
+
+/** Projects **/
+
+@media(min-width: 1280px) {
+    .project {
+        max-width: initial;
+        display: flex;
+        flex-direction: row;
+        column-gap: 3rem;
+    }
+
+    .project:nth-child(odd) {
+        flex-direction: row-reverse;
+    }
+}
+
+.project-text {
+    display: contents;
+}
+
+@media(min-width: 1280px) {
+    .project-text {
+        display: initial;
+        flex: 1 1 26rem;
+    }
+}
+
+@media(min-width: 1280px) {
+    .project-img {
+        flex: 1 1 40.5rem;
+        margin: 0;
+    }
 }
 
 /** Other-skills **/
