--- a/style.css
+++ b/style.css
@@ -97,7 +97,18 @@ small {
     small {
         font-size: 1.375rem;
         line-height: 1.25;
+        border-left: none;
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
         margin-bottom: 1.125rem;
+        padding: 0;
+    }
+    small::before {
+        background-color: currentColor;
+        content: "";
+        width: 4.5rem;
+        height: 0.125rem;
     }
 }
 
@@ -287,11 +298,6 @@ nav a:active {
         display: initial;
         flex: 1 1 26rem;
     }
-}
-
-.project-img {
-    max-height: 90vh, 90dvh;
-    overflow: hidden;
 }
 
 @media(min-width: 1280px) {
