--- a/style.css
+++ b/style.css
@@ -21,11 +21,16 @@ body > * {
     padding-right: 1.25rem;
 }
 
-@media(min-width: 960px) {
+@media(min-width: 480px) {
     body > * {
-        padding-left: 10.25rem;
-        padding-right: 10.25rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
+}
+
+.container {
+    max-width: 69.5rem;
+    margin-inline: auto;
 }
 
 /*** Reusable ***/
@@ -211,8 +216,6 @@ header {
 
 @media(min-width: 960px) {
     header {
-        padding-left: 1.25rem;
-        padding-right: 1.25rem;
         margin-bottom: 6rem;
     }
 }
@@ -223,13 +226,6 @@ header small {
 
 .header-text {
     max-width: 29.125rem;
-}
-
-@media(min-width: 960px) {
-    .container {
-        padding-left: 9.25rem;
-        padding-right: 9.25rem;
-    }
 }
 
 /** Navigation **/
