--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body > * {
     padding-right: 1.25rem;
 }
 
-@media(min-width: 480px) {
+@media (min-width: 480px) {
     body > * {
         padding-left: 2rem;
         padding-right: 2rem;
@@ -49,7 +49,7 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     h1 {
         font-size: 6.875rem;
         margin-bottom: 1.5rem;
@@ -63,7 +63,7 @@ h2 {
     margin-bottom: 0.5rem;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     h2 {
         font-size: 4rem;
         margin-bottom: 1.125rem;
@@ -76,7 +76,7 @@ h3 {
     margin-bottom: 1.5rem;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     h3 {
         font-size: 2.375rem;
     }
@@ -98,7 +98,7 @@ small {
     margin-bottom: 0.5rem;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     small {
         font-size: 1.375rem;
         line-height: 1;
@@ -146,7 +146,7 @@ img {
     margin-bottom: 1.5rem;
 }
 
-@media(min-width: 1280px) {
+@media (min-width: 1280px) {
     img {
         margin: 0;
     }
@@ -156,7 +156,7 @@ section {
     margin-bottom: 4rem;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     section {
         margin-bottom: 6rem;
     }
@@ -170,7 +170,7 @@ article {
     max-width: 36rem;
 }
 
-@media(min-width: 1280px) {
+@media (min-width: 1280px) {
     article {
         margin-bottom: 4rem;
     }
@@ -210,11 +210,12 @@ header {
     background-repeat: no-repeat;
     background-position: right 0 top 0;
     background-size: 1440px auto;
+    mix-blend-mode: exclusion;
     margin-bottom: 2rem;
     max-width: 100%;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     header {
         margin-bottom: 6rem;
     }
@@ -236,7 +237,7 @@ nav ul {
     margin-bottom: 3rem;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     nav ul {
         margin-bottom: 8.4375rem;
     }
@@ -266,7 +267,7 @@ nav a:active {
 
 /** Technologies **/
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     .technologies {
         max-width: 36rem;
     }
@@ -274,7 +275,7 @@ nav a:active {
 
 /** Projects **/
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     .project {
         max-width: initial;
         display: flex;
@@ -291,14 +292,14 @@ nav a:active {
     display: contents;
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     .project-text {
         display: initial;
         flex: 1 1 26rem;
     }
 }
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     .project-img {
         flex: 1 1 40.5rem;
         margin: 0;
@@ -307,7 +308,7 @@ nav a:active {
 
 /** Other-skills **/
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     .other-skills {
         max-width: 50%;
     }
@@ -315,7 +316,7 @@ nav a:active {
 
 /** Contacts **/
 
-@media(min-width: 960px) {
+@media (min-width: 960px) {
     .contacts-description {
         max-width: 50%;
         display: flex;
