--- a/style.css
+++ b/style.css
@@ -6,31 +6,52 @@
 
 body {
     color: hsl(0, 0%, 100%);
-    background-color: #1E2929;
-    background-image: url('images/background.png'), linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
-    background-repeat: no-repeat;
-    background-position: right 0 top 0, left 0 bottom 0;
-    background-size: 1440px auto, 100% 37.5rem;
     font-family: Candara, serif;
     font-weight: 700;
     margin: 0;
 }
 
-body > * {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-}
-
-@media (min-width: 480px) {
-    body > * {
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
+.container-body {
+    background-color: hsl(180, 16%, 14%);
+    background-image: url('images/background.png'), linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
+    background-repeat: no-repeat;
+    background-position: right 0 top 0, left 0 bottom 0;
+    background-size: 1440px auto, 100% 37.5rem;
 }
 
 .container {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
     max-width: 69.5rem;
     margin-inline: auto;
+}
+
+@media (min-width: 480px) {
+    .container {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    } 
+}
+
+.container-header {
+    background-image: url('images/background.png'),
+    linear-gradient(
+    hsl(26, 78%, 86%) 0px,
+    hsl(26, 78%, 86%) 100px,
+    hsl(28, 62%, 81%) 150px,
+    hsl(28, 62%, 81%) 175px,
+    hsl(35, 26%, 75%) 185px,
+    hsl(35, 26%, 75%) 215px,
+    hsl(60, 7%, 65%) 225px,
+    hsl(60, 7%, 65%) 330px,
+    hsl(126, 5%, 60%) 340px,
+    hsl(126, 5%, 60%) 400px,
+    hsl(152, 6%, 50%) 410px,
+    hsl(169, 10%, 31%) 600px);
+    background-repeat: no-repeat;
+    background-position: right 0 top 0;
+    background-size: 1440px auto;
+    padding-top: 1rem;
 }
 
 /*** Reusable ***/
@@ -193,24 +214,6 @@ a:active {
 
 header {
     color: hsl(0, 0%, 0%);
-    background-image: url('images/background.png'),
-    linear-gradient(
-    hsl(26, 78%, 86%) 0px,
-    hsl(26, 78%, 86%) 100px,
-    hsl(28, 62%, 81%) 150px,
-    hsl(28, 62%, 81%) 175px,
-    hsl(35, 26%, 75%) 185px,
-    hsl(35, 26%, 75%) 215px,
-    hsl(60, 7%, 65%) 225px,
-    hsl(60, 7%, 65%) 330px,
-    hsl(126, 5%, 60%) 340px,
-    hsl(126, 5%, 60%) 400px,
-    hsl(152, 6%, 50%) 410px,
-    hsl(169, 10%, 31%) 600px);
-    background-repeat: no-repeat;
-    background-position: right 0 top 0;
-    background-size: 1440px auto;
-    mix-blend-mode: exclusion;
     margin-bottom: 2rem;
     max-width: 100%;
 }
@@ -233,7 +236,6 @@ header small {
 
 nav ul {
     text-align: right;
-    margin-top: 1rem;
     margin-bottom: 3rem;
 }
 
@@ -316,10 +318,18 @@ nav a:active {
 
 /** Contacts **/
 
+
 @media (min-width: 960px) {
     .contacts-description {
         max-width: 50%;
         display: flex;
         column-gap: 1.5rem;
     }
+}
+
+/** Footer **/
+
+footer p {
+    margin-bottom: 0;
+    padding-bottom: 2rem;
 }
