--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
     font-family: Candara, serif;
     font-weight: 700;
@@ -17,17 +18,19 @@ body {
     background-repeat: no-repeat;
     background-position: right 0 top 0, left 0 bottom 0;
     background-size: 1440px auto, 100% 37.5rem;
+    max-width: 90rem;
+    margin: auto;
 }
 
 .container {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
-    max-width: 69.5rem;
     margin-inline: auto;
 }
 
 @media (min-width: 480px) {
     .container {
+        max-width: 73.5rem;
         padding-left: 2rem;
         padding-right: 2rem;
     }
@@ -72,8 +75,8 @@ h1 {
 @media (min-width: 960px) {
     h1 {
         font-size: 6.875rem;
-        margin-bottom: 1.5rem;
         line-height: 1;
+        margin-bottom: 1.375rem;
     }
 }
 
@@ -86,7 +89,7 @@ h2 {
 @media (min-width: 960px) {
     h2 {
         font-size: 4rem;
-        margin-bottom: 1.125rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -99,6 +102,7 @@ h3 {
 @media (min-width: 960px) {
     h3 {
         font-size: 2.375rem;
+        margin-bottom: 1.25rem;
     }
 }
 
@@ -122,11 +126,12 @@ small {
     small {
         font-size: 1.375rem;
         line-height: 1;
+        letter-spacing: 0.375rem;
         border-left: none;
         display: flex;
         align-items: center;
         column-gap: 1rem;
-        margin-bottom: 1.125rem;
+        margin-bottom: 1.375rem;
         padding: 0;
     }
 
@@ -158,19 +163,8 @@ li {
     list-style-type: "— ";
 }
 
-img {
-    display: block;
-    width: auto;
-    max-width: 100%;
-    height: auto;
-    max-height: 90vh;
-    margin-bottom: 1.5rem;
-}
-
-@media (min-width: 1280px) {
-    img {
-        margin: 0;
-    }
+span {
+    display: inline-block;
 }
 
 section {
@@ -179,7 +173,7 @@ section {
 
 @media (min-width: 960px) {
     section {
-        margin-bottom: 6rem;
+        margin-bottom: 6.25rem;
     }
 }
 
@@ -191,9 +185,10 @@ article {
     max-width: 36rem;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 960px) {
     article {
-        margin-bottom: 4rem;
+        margin-top: 2rem;
+        margin-bottom: 4.375rem;
     }
 }
 
@@ -220,13 +215,20 @@ header {
 
 @media (min-width: 960px) {
     header {
-        margin-bottom: 6rem;
+        margin-bottom: 6.25rem;
     }
 }
 
 header small {
     color: inherit;
 }
+
+@media (min-width: 960px) {
+    header small {
+        margin-bottom: 1.75rem;
+    }
+}
+
 
 .header-text {
     max-width: 29.125rem;
@@ -242,7 +244,7 @@ nav ul {
 
 @media (min-width: 960px) {
     nav ul {
-        margin-bottom: 8.4375rem;
+        margin-bottom: 8rem;
     }
 }
 
@@ -285,9 +287,24 @@ nav a:active {
         flex-direction: row;
         column-gap: 3rem;
     }
-
+    
     .project:nth-child(odd) {
         flex-direction: row-reverse;
+    }
+}
+
+.project img {
+    display: block;
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 90vh;
+    margin-bottom: 1.5rem;
+}
+
+@media (min-width: 1280px) {
+    .project img {
+        margin: 0;
     }
 }
 
@@ -321,12 +338,12 @@ nav a:active {
 
 @media (min-width: 960px) {
     .contacts-description {
-        max-width: 50%;
         display: flex;
+        flex-basis: 50%;
         column-gap: 1.5rem;
     }
 
-    .contacts-description p {
+    .contacts-info {
         flex: 1 0 auto;
     }
 }
