--- a/style.css
+++ b/style.css
@@ -22,6 +22,24 @@ body {
     margin: auto;
 }
 
+@media (min-width: 360px) {
+    .container-body {
+        background-image: ;
+    }
+}
+
+@media (min-width: 410px) {
+    .container-body {
+        background-image: ;
+    }
+}
+
+@media (min-width: 1280px) {
+    .container-body {
+        background-image: ;
+    }
+}
+
 .container {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -188,7 +206,7 @@ article {
 @media (min-width: 960px) {
     article {
         margin-top: 2rem;
-        margin-bottom: 4.375rem;
+        margin-bottom: 4rem;
     }
 }
 
@@ -209,7 +227,7 @@ a:active {
 
 header {
     color: hsl(0, 0%, 0%);
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     max-width: 100%;
 }
 
@@ -228,7 +246,6 @@ header small {
         margin-bottom: 1.75rem;
     }
 }
-
 
 .header-text {
     max-width: 29.125rem;
@@ -321,7 +338,7 @@ nav a:active {
 
 @media (min-width: 960px) {
     .project-img {
-        flex: 1 1 40.5rem;
+        flex: 0 1 40.5rem;
         margin: 0;
     }
 }
