--- a/style.css
+++ b/style.css
@@ -12,31 +12,56 @@ body {
     margin: 0;
 }
 
+
 .container-body {
-    background-color: hsl(180, 16%, 14%);
-    background-image: url('images/background.png'), linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
+    background-size:
+    var(--bg-width) auto,
+    100% 37.5rem;
+    background-image:
+        var(--bg-image),
+        linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
+
+    background-color: hsla(180, 15%, 14%, 1);
     background-repeat: no-repeat;
     background-position: right 0 top 0, left 0 bottom 0;
-    background-size: 1440px auto, 100% 37.5rem;
     max-width: 90rem;
     margin: auto;
 }
 
-@media (min-width: 360px) {
-    .container-body {
-        background-image: ;
-    }
+.container-header {
+    background-size: var(--bg-width) auto;
+    background-image:
+        var(--bg-image),
+        linear-gradient(hsl(26, 78%, 86%) 0px,
+            hsl(26, 78%, 86%) 100px,
+            hsl(28, 62%, 81%) 150px,
+            hsl(28, 62%, 81%) 175px,
+            hsl(35, 26%, 75%) 185px,
+            hsl(35, 26%, 75%) 215px,
+            hsl(60, 7%, 65%) 225px,
+            hsl(60, 7%, 65%) 330px,
+            hsl(126, 5%, 60%) 340px,
+            hsl(126, 5%, 60%) 400px,
+            hsl(152, 6%, 50%) 410px,
+            hsl(169, 10%, 31%) 600px);
+
+    background-repeat: no-repeat;
+    background-position: right 0 top 0;
+    padding-top: 1rem;
+}
+
+.container-header,
+.container-body {
+    --bg-width: 410px;
+    --bg-image: url('images/bg-733w.webp');
 }
 
 @media (min-width: 410px) {
-    .container-body {
-        background-image: ;
-    }
-}
 
-@media (min-width: 1280px) {
+    .container-header,
     .container-body {
-        background-image: ;
+        --bg-width: 1440px;
+        --bg-image: url('images/bg-2575w.webp');
     }
 }
 
@@ -52,26 +77,6 @@ body {
         padding-left: 2rem;
         padding-right: 2rem;
     }
-}
-
-.container-header {
-    background-image: url('images/background.png'),
-        linear-gradient(hsl(26, 78%, 86%) 0px,
-            hsl(26, 78%, 86%) 100px,
-            hsl(28, 62%, 81%) 150px,
-            hsl(28, 62%, 81%) 175px,
-            hsl(35, 26%, 75%) 185px,
-            hsl(35, 26%, 75%) 215px,
-            hsl(60, 7%, 65%) 225px,
-            hsl(60, 7%, 65%) 330px,
-            hsl(126, 5%, 60%) 340px,
-            hsl(126, 5%, 60%) 400px,
-            hsl(152, 6%, 50%) 410px,
-            hsl(169, 10%, 31%) 600px);
-    background-repeat: no-repeat;
-    background-position: right 0 top 0;
-    background-size: 1440px auto;
-    padding-top: 1rem;
 }
 
 /*** Reusable ***/
@@ -304,7 +309,7 @@ nav a:active {
         flex-direction: row;
         column-gap: 3rem;
     }
-    
+
     .project:nth-child(odd) {
         flex-direction: row-reverse;
     }
