--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     margin: 0;
 }
 
-
 .container-body {
     background-size:
     var(--bg-width) auto,
@@ -324,6 +323,13 @@ nav a:active {
     margin-bottom: 1.5rem;
 }
 
+@media (min-width: 960px) {
+    .project-img {
+        flex: 0 1 40.5rem;
+        margin: 0;
+    }
+}
+
 @media (min-width: 1280px) {
     .project img {
         margin: 0;
@@ -338,13 +344,6 @@ nav a:active {
     .project-text {
         display: initial;
         flex: 1 1 26rem;
-    }
-}
-
-@media (min-width: 960px) {
-    .project-img {
-        flex: 0 1 40.5rem;
-        margin: 0;
     }
 }
 
@@ -365,6 +364,12 @@ nav a:active {
         column-gap: 1.5rem;
     }
 
+    .contacts-info {
+        flex: 1 0 auto;
+    }
+}
+
+@media (min-width: 960px) {
     .contacts-info {
         flex: 1 0 auto;
     }
