--- a/style.css
+++ b/style.css
@@ -7,31 +7,34 @@
 body {
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
+
     font-family: Candara, serif;
     font-weight: 700;
+
     margin: 0;
 }
 
 .container-body {
-    background-size:
-    var(--bg-width) auto,
-    100% 37.5rem;
-    background-image:
+    background-size: 
+        var(--bg-width) auto, 
+        100% 37.5rem;
+    background-image: 
         var(--bg-image),
         linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
-
     background-color: hsla(180, 15%, 14%, 1);
     background-repeat: no-repeat;
-    background-position: right 0 top 0, left 0 bottom 0;
+    background-position: 
+        right 0 top 0,
+        left 0 bottom 0;
     max-width: 90rem;
     margin: auto;
 }
 
 .container-header {
     background-size: var(--bg-width) auto;
-    background-image:
-        var(--bg-image),
-        linear-gradient(hsl(26, 78%, 86%) 0px,
+    background-image: var(--bg-image),
+        linear-gradient(
+            hsl(26, 78%, 86%) 0px,
             hsl(26, 78%, 86%) 100px,
             hsl(28, 62%, 81%) 150px,
             hsl(28, 62%, 81%) 175px,
@@ -42,39 +45,37 @@ body {
             hsl(126, 5%, 60%) 340px,
             hsl(126, 5%, 60%) 400px,
             hsl(152, 6%, 50%) 410px,
-            hsl(169, 10%, 31%) 600px);
-
+            hsl(169, 10%, 31%) 600px
+        );
     background-repeat: no-repeat;
     background-position: right 0 top 0;
+
     padding-top: 1rem;
 }
 
 .container-header,
 .container-body {
     --bg-width: 410px;
-    --bg-image: url('images/bg-733w.webp');
+    --bg-image: url("images/bg-733w.webp");
 }
 
 @media (min-width: 410px) {
-
     .container-header,
     .container-body {
         --bg-width: 1440px;
-        --bg-image: url('images/bg-2575w.webp');
+        --bg-image: url("images/bg-2575w.webp");
     }
 }
 
 .container {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+    padding-inline: 1.25rem;
     margin-inline: auto;
 }
 
 @media (min-width: 480px) {
     .container {
         max-width: 73.5rem;
-        padding-left: 2rem;
-        padding-right: 2rem;
+        padding-inline: 2rem;
     }
 }
 
@@ -130,17 +131,19 @@ h3 {
 
 small {
     color: hsl(31, 100%, 92%);
+
     font-family: Candara, sans-serif;
     font-size: 1rem;
     font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.375em;
     text-transform: uppercase;
-    border-left: 2px solid currentColor;
+
     display: block;
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
+
+    padding-block: 0.25rem;
     padding-left: 1rem;
+    border-left: 2px solid currentColor; 
     margin-bottom: 0.5rem;
 }
 
@@ -148,13 +151,14 @@ small {
     small {
         font-size: 1.375rem;
         line-height: 1;
-        letter-spacing: 0.375rem;
-        border-left: none;
+
         display: flex;
         align-items: center;
         column-gap: 1rem;
-        margin-bottom: 1.375rem;
+
         padding: 0;
+        border-left: none;
+        margin-bottom: 1.375rem;
     }
 
     small::before {
@@ -170,11 +174,6 @@ ul {
     font-size: 1.375rem;
     line-height: 1.5;
     margin-top: 0;
-}
-
-p {
-    margin-bottom: 2rem;
-    order: 1;
 }
 
 ul {
@@ -211,21 +210,6 @@ section {
     }
 }
 
-article {
-    display: flex;
-    flex-direction: column;
-    margin-top: 1.5rem;
-    margin-bottom: 2.25rem;
-    max-width: 36rem;
-}
-
-@media (min-width: 960px) {
-    article {
-        margin-top: 2rem;
-        margin-bottom: 4rem;
-    }
-}
-
 /*** Links ***/
 
 a,
@@ -244,7 +228,6 @@ a:active {
 header {
     color: hsl(0, 0%, 0%);
     margin-bottom: 4rem;
-    max-width: 100%;
 }
 
 @media (min-width: 960px) {
@@ -285,13 +268,16 @@ nav a,
 nav a:link,
 nav a:visited {
     color: hsl(0, 0%, 0%);
+
     font-size: 1rem;
     line-height: 1.25;
     text-transform: uppercase;
     text-decoration: none;
+
     display: inline-block;
-    margin-left: 0.375rem;
+
     padding: 0.5rem 0.375rem;
+    margin-left: 0.375rem;
 }
 
 nav a:hover,
@@ -299,22 +285,28 @@ nav a:active {
     color: hsl(180, 15%, 14%);
 }
 
-/** Technologies **/
-
-@media (min-width: 960px) {
-    .technologies {
-        max-width: 36rem;
-    }
-}
-
 /** Projects **/
+
+.project {
+    display: flex;
+    flex-direction: column;
+
+    max-width: 36rem;
+
+    margin-top: 1.5rem;
+    margin-bottom: 2.25rem;
+}
 
 @media (min-width: 960px) {
     .project {
         max-width: initial;
+
         display: flex;
         flex-direction: row;
         column-gap: 3rem;
+
+        margin-top: 2rem;
+        margin-bottom: 4rem;
     }
 
     .project:nth-child(odd) {
@@ -328,6 +320,7 @@ nav a:active {
     max-width: 100%;
     height: auto;
     max-height: 90vh;
+
     margin-bottom: 1.5rem;
 }
 
@@ -348,6 +341,7 @@ nav a:active {
     display: contents;
 }
 
+
 @media (min-width: 960px) {
     .project-text {
         display: initial;
@@ -355,37 +349,15 @@ nav a:active {
     }
 }
 
-/** Other-skills **/
-
-@media (min-width: 960px) {
-    .other-skills {
-        max-width: 50%;
-    }
+.project-text p {
+    margin-bottom: 2rem;
+    order: 1;
 }
 
 /** Contacts **/
 
-@media (min-width: 960px) {
-    .contacts-description {
-        display: flex;
-        flex-basis: 50%;
-        column-gap: 1.5rem;
-    }
-
-    .contacts-info {
-        flex: 1 0 auto;
-    }
-}
-
-@media (min-width: 960px) {
-    .contacts-info {
-        flex: 1 0 auto;
-    }
-}
-
-/** Footer **/
-
-footer p {
-    margin-bottom: 0;
-    padding-bottom: 2rem;
+.contacts-description {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
 }
