--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ span {
     }
 }
 
-small {
+.overheading {
     color: hsl(31, 100%, 92%);
 
     font-family: Candara, sans-serif;
@@ -192,7 +192,7 @@ small {
 }
 
 @media (min-width: 960px) {
-    small {
+    .overheading {
         font-size: 1.375rem;
         line-height: 1;
 
@@ -205,7 +205,7 @@ small {
         margin-bottom: 1.375rem;
     }
 
-    small::before {
+    .overheading::before {
         background-color: currentColor;
         content: "";
         height: 0.125rem;
@@ -236,12 +236,12 @@ header {
     }
 }
 
-header small {
+.overheading-header {
     color: inherit;
 }
 
 @media (min-width: 960px) {
-    header small {
+    .overheading-header {
         margin-bottom: 1.75rem;
     }
 }
