--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
 
-    font-family: Candara, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
 
     margin: 0;
@@ -32,7 +32,7 @@ a:active {
 h1,
 h2,
 h3 {
-    font-family: Cambria, serif;
+    font-family: 'Lora', serif;
     font-weight: 400;
     margin-top: 0;
 }
