--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
     background-color: hsl(0, 0%, 0%);
     color: hsl(0, 0%, 100%);
 
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
 
     margin: 0;
 }
@@ -33,7 +33,7 @@ a:active {
 h1,
 h2,
 h3 {
-    font-family: 'Lora', serif;
+    font-family: "Lora", serif;
     font-weight: 400;
     margin-top: 0;
 }
@@ -117,18 +117,18 @@ section {
 .overheading {
     color: hsl(31, 100%, 92%);
 
-    font-family: Candara, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.375em;
     text-transform: uppercase;
 
     display: block;
-    
+
     padding-block: 0.25rem;
     padding-left: 1rem;
-    border-left: 2px solid currentColor; 
+    border-left: 2px solid currentColor;
     margin-bottom: 0.5rem;
 }
 
@@ -136,16 +136,16 @@ section {
     .overheading {
         font-size: 1.375rem;
         line-height: 1;
-        
+
         display: flex;
         align-items: center;
         column-gap: 1rem;
-        
+
         padding: 0;
         border-left: none;
         margin-bottom: 1.375rem;
     }
-    
+
     .overheading::before {
         background-color: currentColor;
         content: "";
@@ -167,17 +167,11 @@ section {
 /** Containers **/
 
 .container-body {
-    background-size: 
-        var(--bg-width) auto, 
-        100% 37.5rem;
-    background-image: 
-        var(--bg-image),
-        linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
+    background-size: var(--bg-width) auto, 100% 37.5rem;
+    background-image: var(--bg-image), linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
     background-color: hsla(180, 15%, 14%, 1);
     background-repeat: no-repeat;
-    background-position: 
-        right 0 top 0,
-        left 0 bottom 0;
+    background-position: right 0 top 0, left 0 bottom 0;
     max-width: 90rem;
     margin: auto;
 }
@@ -222,26 +216,26 @@ section {
 .header__container {
     background-size: var(--bg-width) auto;
     background-image: var(--bg-image),
-    linear-gradient(
-        hsl(26, 78%, 86%) 0px,
-        hsl(26, 78%, 86%) 100px,
-        hsl(28, 62%, 81%) 150px,
-        hsl(28, 62%, 81%) 175px,
-        hsl(35, 26%, 75%) 185px,
-        hsl(35, 26%, 75%) 215px,
-        hsl(60, 7%, 65%) 225px,
-        hsl(60, 7%, 65%) 330px,
-        hsl(126, 5%, 60%) 340px,
-        hsl(126, 5%, 60%) 400px,
-        hsl(152, 6%, 50%) 410px,
-        hsl(169, 10%, 31%) 600px
+        linear-gradient(
+            hsl(26, 78%, 86%) 0px,
+            hsl(26, 78%, 86%) 100px,
+            hsl(28, 62%, 81%) 150px,
+            hsl(28, 62%, 81%) 175px,
+            hsl(35, 26%, 75%) 185px,
+            hsl(35, 26%, 75%) 215px,
+            hsl(60, 7%, 65%) 225px,
+            hsl(60, 7%, 65%) 330px,
+            hsl(126, 5%, 60%) 340px,
+            hsl(126, 5%, 60%) 400px,
+            hsl(152, 6%, 50%) 410px,
+            hsl(169, 10%, 31%) 600px
         );
     background-repeat: no-repeat;
     background-position: right 0 top 0;
-    
+
     padding-top: 1rem;
 }
-        
+
 .header__container {
     --bg-width: 410px;
     --bg-image: url("images/bg-733w.webp");
@@ -257,7 +251,7 @@ section {
 .header__text {
     max-width: 29.125rem;
 }
-        
+
 /** Navigation **/
 
 .navigation {
@@ -298,9 +292,9 @@ section {
 .project {
     display: flex;
     flex-direction: column;
-    
+
     max-width: 36rem;
-    
+
     margin-top: 1.5rem;
     margin-bottom: 2.25rem;
 }
@@ -308,15 +302,15 @@ section {
 @media (min-width: 960px) {
     .project {
         max-width: initial;
-        
+
         display: flex;
         flex-direction: row-reverse;
         column-gap: 3rem;
-        
+
         margin-top: 2rem;
         margin-bottom: 4rem;
     }
-    
+
     .project:nth-child(odd) {
         flex-direction: row;
     }
@@ -364,11 +358,15 @@ section {
     }
 }
 
-
 /** Contacts **/
 
 .contacts {
     display: flex;
     flex-wrap: wrap;
     column-gap: 1.5rem;
+}
+
+.contacts__photo {
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
 }
