--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ section {
 .container-body {
     background-size: var(--bg-width) auto, 100% 37.5rem;
     background-image: var(--bg-image), linear-gradient(hsla(185, 16%, 13%, 0), hsl(0, 0%, 0%));
-    background-color: hsla(180, 15%, 14%, 1);
+    background-color: hsl(185, 15%, 16%, 1);
     background-repeat: no-repeat;
     background-position: right 0 top 0, left 0 bottom 0;
     max-width: 90rem;
