--- a/style.css
+++ b/style.css
@@ -345,6 +345,13 @@ section {
     object-fit: contain;
     object-position: 0;
     margin-bottom: 1.5rem;
+
+    transition: transform 0.3s ease;
+}
+
+.project__photo:hover {
+    transform: scale(0.99);
+    opacity: 0.9;
 }
 
 @media (min-width: 960px) {
